added base css layout with SMACSS

--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        A
+    </header>
+    <aside>
+        B
+    </aside>
+    <article>
+        C
+    </article>
+    <article>
+        D
+    </article>
+    <section class = "quad">
+        E
+    </section>
+    <section class = "quad">
+        F
+    </section>
+    <section class = "quad">
+        G
+    </section>
+    <section class = "quad">
+        H
+    </section>
+    <section class = "bottom">
+        I
+    </section>
 </body>
 </html>
