added colours and tranitions

--- a/index.html
+++ b/index.html
@@ -8,31 +8,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="a">
         A
     </header>
-    <aside>
+    <aside class="b">
         B
     </aside>
-    <article>
+    <article class="c">
         C
     </article>
-    <article>
+    <article class="d">
         D
     </article>
-    <section class = "quad">
+    <section class = "quad e">
         E
     </section>
-    <section class = "quad">
+    <section class = "quad f">
         F
     </section>
-    <section class = "quad">
+    <section class = "quad g">
         G
     </section>
-    <section class = "quad">
+    <section class = "quad h">
         H
     </section>
-    <section class = "bottom">
+    <section class = "bottom i">
         I
     </section>
 </body>
