updated to grid

--- a/index.html
+++ b/index.html
@@ -8,32 +8,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="a">
-        A
-    </header>
-    <aside class="b">
-        B
-    </aside>
-    <article class="c">
-        C
-    </article>
-    <article class="d">
-        D
-    </article>
-    <section class = "quad e">
-        E
-    </section>
-    <section class = "quad f">
-        F
-    </section>
-    <section class = "quad g">
-        G
-    </section>
-    <section class = "quad h">
-        H
-    </section>
-    <section class = "bottom i">
-        I
-    </section>
+    <div>
+        <header class="a">
+            A
+        </header>
+        <aside class="b">
+            B
+        </aside>
+        <article class="c">
+            C
+        </article>
+        <article class="d">
+            D
+        </article>
+        <section class = "quad e">
+            E
+        </section>
+        <section class = "quad f">
+            F
+        </section>
+        <section class = "quad g">
+            G
+        </section>
+        <section class = "quad h">
+            H
+        </section>
+        <section class = "bottom i">
+            I
+        </section>
+    </div>
 </body>
 </html>
